<resources>
    <string name="app_name">Забей стрелку</string>
    <string name="add">Добавить</string>
    <string name="name_event_hint">Название события</string>
    <string name="max_people_event_hint">Макс. участников*</string>
    <string name="description">Описание</string>
    <string name="event_added">Событие добавлено</string>
    <string name="error">Произошла ошибка</string>
    <string name="events_map">Карта событий</string>
    <string name="map">Карта</string>
    <string name="events_list">Список событий</string>
    <string name="my_events">Мои события</string>
    <string name="templates">Шаблоны событий</string>
    <string name="my">Я пойду</string>

    <string name="network_error">Сетевое подключение отсутствует</string>

    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="please_wait">Загрузка</string>
    <string name="preferences">CREDENTIALS</string>

    <string name="cant_get_events">Не удалось получить список событий</string>

    <string name="search">Поиск по категории</string>

    <string name="users">%1$d&#47;%2$d</string>
    <string name="leave">Покинуть</string>
    <string name="join">ВОЙТИ</string>
    <string name="joinAlready">ВЫЙТИ</string>
    <string name="angry">ЖАЛОБА</string>
    <string name="cant_load_position">Не удалось загрузить местоположение</string>
    <string name="angryAlready">ВЫ ПОЖАЛОВАЛИСЬ</string>
    <string name="share">Поделиться</string>
    <string name="edit">Правка</string>
    <string name="edit_event">Редактирование события</string>
    <string name="result">Результат</string>
    <string name="result_sent">Результат события отправлен</string>
    <string name="ok">ОК</string>
    <string name="cancel">ОТМЕНИТЬ</string>
    <string name="cancel_event">Отменить событие</string>
    <string name="event_canceled">Событие отменено</string>
    <string name="event_edited">Событие отредактировано</string>
    <string name="datetime_picker_btn_set">Установить</string>
    <string name="datetime_picker_header">Установить дату</string>
    <string name="datetime">Дата и время</string>
    <string name="add_event_set_date_btn">задать</string>
    <string name="category">Вид спорта</string>
    <string name="description_header">Описание</string>
    <string name="tasks_header">Cписок задач</string>
    <string name="reduce">убрать</string>
    <string name="result_header">Итог события</string>
    <string name="you_connected_msg">вы участвуете</string>
    <string name="add_event">Создание события</string>
    <string name="add_result">Добавить итог</string>
    <string name="people">Участники</string>
    <string name="add_to_event">Присоединиться к событию</string>
    <string name="want_angry">Пожаловаться на событие?</string>
    <string name="cant_create_event_in_past">Событие в прошлом нельзя создать</string>
    <string name="organized_events">Я организую</string>
    <string name="resulted">Завершены</string>

    <string name="title_location_access">Доступ к местоположению</string>
    <string name="cannot_find_you">Без доступа к местоположению мы не можем показать ближайшие события</string>
    <string name="location_disabled_message">Местоположение отключено.\nДля показа событий рядом с Вами необходимо включить доступ к местоплложению.\nОткрыть настройки?</string>
    <string name="event_name">Название события*</string>
    <string name="play_in">Во что играем</string>
    <string name="how_much_us">Ограничение</string>
    <string name="event_description">Описание события</string>
    <string name="save">Сохранить</string>
    <string name="address_header">место</string>
    <string name="need_set_date_and_time">Задайте дату и время</string>
    <string name="no_templates">У Вас нет шаблонов</string>
    <string name="no_ended_events">Нет завершеных событий</string>
    <string name="no_my_events">Вы не участвуете ни в одном событии</string>
    <string name="no_organized_events">Вы не организовали ни одного события</string>
    <string name="add_template">Добавить шаблон</string>
    <string name="create_event">Создать событие</string>
    <string name="events_around">События поблизости</string>
    <string name="no_events_around">поблизости нет событий</string>

    <string-array name="list_reminder_times">
        <item>1 час</item>
        <item>2 часа</item>
        <item>3 часа</item>
    </string-array>
    <string name="title_activity_event_details">EventDetailsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="address">Место</string>
    <string name="next">ДАЛЕЕ</string>
    <string name="sport">Спорт*</string>
    <string name="time">Время начала</string>
    <string name="organizer">Организатор</string>
    <string name="delete">Удалить</string>
    <string name="delete_template_message">Вы действительно хотите удалить шаблон?</string>
    <string name="no_description">Нет описания</string>
    <string name="create">Создать</string>
    <string name="add_task">Добавление задачи</string>
    <string name="add_tasks">Добавление задач</string>
    <string name="no_tasks">Добавьте задачи к событию</string>
</resources>
