<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp" />

        <eu.long1.spacetablayout.SpaceTabLayout
            android:id="@+id/space_tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:button_color="@color/colorAccent"
            app:icon_three="@drawable/ic_organized"
            app:icon_two="@drawable/ic_racing_flag"
            app:layout_behavior="eu.long1.spacetablayout.SpaceTabLayoutBehavior"
            app:number_of_tabs="three"
            app:starting_position="one"
            app:tab_color="@color/colorPrimary"
            app:text_one="@string/my"
            app:text_three="@string/organized_events"
            app:text_two="@string/resulted" />

    </android.support.design.widget.CoordinatorLayout>
</layout>
