<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="ru.mail.sporttogether.data.binding.event.EditEventData" />

        <variable
            name="listener"
            type="ru.mail.sporttogether.data.binding.event.EditEventListener" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/event_name"
            android:textColor="?android:textColorSecondary"
            android:textSize="13sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textPersonName"
            android:text="@={data.name}"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/max_people_event_hint"
            android:textColor="?android:textColorSecondary"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="@+id/editName"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <EditText
            android:id="@+id/editCountPeople"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:hint="@string/how_much_us"
            android:inputType="number"
            android:maxLength="3"
            android:text="@={data.peopleCoint}"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView4"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/event_description"
            android:textColor="?android:textColorSecondary"
            android:textSize="13sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/editCountPeople"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCountPeople" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textMultiLine"
            android:lines="4"
            android:text="@={data.description}"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/green"
            android:onClick="@{() -> listener.saveEventClicked()}"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@+id/editDescription"
            app:layout_constraintRight_toRightOf="@+id/editDescription"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" />

        <Button
            android:id="@+id/cancel_event_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/red"
            android:onClick="@{() -> listener.cancelEventClicked()}"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/cancel_event"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/saveButton"
            app:layout_constraintRight_toRightOf="@+id/saveButton"
            app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    </android.support.constraint.ConstraintLayout>
</layout>
