<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="ru.mail.sporttogether.data.binding.event.EditEventData" />

        <variable
            name="listener"
            type="ru.mail.sporttogether.data.binding.event.EditEventListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_edit_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="ru.mail.sporttogether.activities.EditEventActivity">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/category"
                android:textColor="?android:textColorSecondary"
                android:textSize="13sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/editName"
                app:layout_constraintRight_toRightOf="@+id/editName"
                app:layout_constraintTop_toBottomOf="@+id/editName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/event_name"
                android:textColor="?android:textColorSecondary"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPersonName"
                android:text="@={data.name}"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintRight_toRightOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/editCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:hint="@string/play_in"
                android:inputType="textPersonName"
                android:text="@={data.category}"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintRight_toRightOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/max_people_event_hint"
                android:textColor="?android:textColorSecondary"
                android:textSize="13sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/editCategory"
                app:layout_constraintRight_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/editCategory" />

            <EditText
                android:id="@+id/editCountPeople"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/how_much_us"
                android:inputType="number"
                android:text="@={data.peopleCoint}"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textView4"
                app:layout_constraintRight_toRightOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/datetime"
                android:textColor="?android:textColorSecondary"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="@+id/editCategory"
                app:layout_constraintTop_toBottomOf="@+id/editCategory" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> listener.dateTimeClicked()}"
                android:src="@drawable/ic_time"
                app:layout_constraintBottom_toBottomOf="@+id/editCountPeople"
                app:layout_constraintRight_toRightOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4"
                tools:layout_editor_absoluteX="144dp"
                tools:layout_editor_absoluteY="81dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textView5"
                app:layout_constraintRight_toLeftOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="@+id/imageButton"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/event_description"
                android:textColor="?android:textColorSecondary"
                android:textSize="13sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/editCountPeople"
                app:layout_constraintRight_toRightOf="@+id/imageButton"
                app:layout_constraintTop_toBottomOf="@+id/editCountPeople" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:lines="3"
                android:text="@={data.description}"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                app:layout_constraintRight_toRightOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <Button
                android:id="@+id/saveButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/green"
                android:onClick="@{() -> listener.saveEventClicked()}"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/editDescription"
                app:layout_constraintRight_toRightOf="@+id/editDescription"
                app:layout_constraintTop_toBottomOf="@+id/editDescription" />

            <Button
                android:id="@+id/cancel_event_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/red"
                android:onClick="@{() -> listener.cancelEventClicked()}"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/cancel_event"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/saveButton"
                app:layout_constraintRight_toRightOf="@+id/saveButton"
                app:layout_constraintTop_toBottomOf="@+id/saveButton" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</layout>

